# ferriorm

./: CLAUDE.md  Cargo.toml  README.md
.github/workflows/: ci.yml  docs.yml
crates/ferriorm-cli/: Cargo.toml
crates/ferriorm-cli/src/: main.rs
crates/ferriorm-codegen/: Cargo.toml
crates/ferriorm-codegen/src/: client.rs  enums.rs  formatter.rs  generator.rs  lib.rs  model.rs  relations.rs  rust_type.rs
crates/ferriorm-core/: Cargo.toml
crates/ferriorm-core/src/: lib.rs  schema.rs  types.rs  utils.rs
crates/ferriorm-migrate/: Cargo.toml
crates/ferriorm-migrate/src/: diff.rs  introspect.rs  lib.rs  runner.rs  shadow.rs  snapshot.rs  state.rs
crates/ferriorm-migrate/src/sql/: mod.rs  postgres.rs  sqlite.rs
crates/ferriorm-parser/: Cargo.toml
crates/ferriorm-parser/src/: lib.rs  parser.rs  validator.rs
crates/ferriorm-runtime/: Cargo.toml
crates/ferriorm-runtime/src/: client.rs  filter.rs  lib.rs  order.rs  query.rs  transaction.rs
crates/ormx-cli/: Cargo.toml
crates/ormx-cli/src/: main.rs
crates/ormx-cli/src/commands/: db.rs  generate.rs  init.rs  migrate.rs  mod.rs
crates/ormx-codegen/: Cargo.toml
crates/ormx-codegen/src/: client.rs  enums.rs  formatter.rs  generator.rs  lib.rs  model.rs  rust_type.rs
crates/ormx-core/: Cargo.toml
crates/ormx-core/src/: ast.rs  error.rs  lib.rs  schema.rs  types.rs
crates/ormx-migrate/: Cargo.toml
crates/ormx-migrate/src/: diff.rs  introspect.rs  lib.rs  runner.rs  shadow.rs
crates/ormx-parser/: Cargo.toml
crates/ormx-parser/src/: error.rs  grammar.pest  lib.rs  parser.rs  validator.rs
crates/ormx-runtime/: Cargo.toml
crates/ormx-runtime/src/: client.rs  error.rs  filter.rs  lib.rs  order.rs  query.rs  transaction.rs
docs/src/client/: crud.md  filtering.md
docs/src/getting-started/: installation.md
docs/src/reference/: database-support.md
docs/src/schema/: attributes.md  fields-and-types.md  models.md
examples/basic/: Cargo.toml  schema.ferriorm  schema.ormx
examples/basic/src/: main.rs
scripts/: publish.sh
tests/e2e/: Cargo.toml
tests/e2e/src/: lib.rs
tests/e2e/tests/: diff_engine.rs  migration_shadow_sqlite.rs  migration_sqlite.rs  parse_and_generate.rs  sqlite_bugfixes.rs  sqlite_crud.rs  tier1_features.rs
