[package]
name = "ferriorm-core"
description = "Core domain types for ferriorm ORM - zero external dependencies"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../../README.md"

[features]
default = []
serde = ["dep:serde"]

[dependencies]
serde = { workspace = true, optional = true }
