[package]
name = "ormx-codegen"
description = "Code generator for ormx ORM - generates type-safe Rust client code"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ormx-core.workspace = true
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true
prettyplease.workspace = true
