[package]
name = "ormx-parser"
description = "Schema parser for ormx ORM - parses .ormx files into AST"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ormx-core.workspace = true
pest.workspace = true
pest_derive.workspace = true
miette.workspace = true
thiserror.workspace = true
