[package]
name = "ormx-runtime"
description = "Runtime library for ormx ORM - database client, filters, query execution"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["postgres"]
postgres = ["sqlx/postgres"]
sqlite = ["sqlx/sqlite"]

[dependencies]
ormx-core.workspace = true
sqlx.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
uuid.workspace = true
thiserror.workspace = true
tracing.workspace = true
